nav bar visibility issue

--- a/src/moodle41/styles/navbar.scss
+++ b/src/moodle41/styles/navbar.scss
@@ -26,6 +26,11 @@
   }
 }
 
+// fix transparent navigation bar
+.moremenu {
+  opacity: 1 !important;
+}
+
 
 // left link buttons
 .navbar-nav{
